complete typing figure for fkotac

--- a/macrosMain.tex
+++ b/macrosMain.tex
@@ -119,6 +119,7 @@ body}}
 
 \newcommand{\aggrK}{@@}
 \newcommand{\eqSymK}[1]{\mathrm{ \texttt{= \aggrK \{} #1 \texttt{\}} }}
+\newcommand{\feqSymK}[1]{\mathrm{ \texttt{= \{} #1 \texttt{\}} }}
 \newcommand{\ftoSymK}[1]{\mathrm{ \texttt{=>\{}#1\texttt{\}} }}
 \newcommand{\ftoSym}[1]{\mathrm{ \texttt{=>}#1 }}
 \newcommand{\toSymK}[1]{\mathrm{ \texttt{=> \aggrK\{} #1 \texttt{\}} }}
