complete kotac chapter

--- a/macrosMain.tex
+++ b/macrosMain.tex
@@ -169,6 +169,7 @@ body}}
 \newcommand{\rtype}{\textit{R}}
 \newcommand{\stype}{\textit{S}}
 \newcommand{\builtintype}{\textit{B}}
+\newcommand{\bitype}{\textit{D}}
 \newcommand{\ltypeset}{\textit{Lset}}
 
 \newcommand{\ftypeOf}[1]{\mathtt{field}(#1)}
@@ -181,6 +182,7 @@ body}}
 \newcommand{\rtvar}{r}
 \newcommand{\ltvar}{l}
 \newcommand{\tvar}{t}
+\newcommand{\bvar}{d}
 \newcommand{\aann}{\textit{a}}
 \newcommand{\sann}{\textit{s}}
 
