--- a/src/45-comparison.tex
+++ b/src/45-comparison.tex
@@ -511,7 +511,7 @@ Rule \ruleNameSize{[N-FIR]} models a computational round on device $\deviceId$ b
 } \caption{Type rules for \FSCAFI{} expressions, function declarations, and programs. from \cite{Scafi}} \label{fig:fscafiTyping}
 \end{figure}
 
-Figure \ref{fig:fscafiTyping} present a type system for \FSCAFI from \cite{Scafi}. A type $\type$ can be either a type variable $\tvar$, a built-in type $\builtintype$ or a function type $(\overline\type) \rightarrow \type$. Type schemes $\typescheme$ can produce regulart types $\type$ by replacing the type variables with a type. The typing jedgement rules are given in the form $\expTypJud{\TStypEnv}{\TtypEnv}{\e}{\type}$, meaning that $\e$ has type $\type$ under the type-scheme assumptions $\TStypEnv$ and the type assumtions $\TtypEnv$. A type scheme environement $\TStypEnv$ collect the type schemes for built-in constructors, built-in operators and user-defined functions. A type environment $\TtypEnv$ collects the types for program variables. $\OStypEnv$ denotes the distinguished built-in type-scheme environment for built-in constructors and built-in functions. $\FTV{\type}$ denotes the set of type variables occurring in the type $\type$.
+Figure \ref{fig:fscafiTyping} present a type system for \FSCAFI from \cite{Scafi}. A type $\type$ can be either a type variable $\tvar$, a built-in type $\builtintype$ or a function type $(\overline\type) \rightarrow \type$. Type schemes $\typescheme$ can produce regular types $\type$ by replacing the type variables with a type. The typing judgement rules are given in the form $\expTypJud{\TStypEnv}{\TtypEnv}{\e}{\type}$, meaning that $\e$ has type $\type$ under the type-scheme assumptions $\TStypEnv$ and the type assumtions $\TtypEnv$. A type scheme environement $\TStypEnv$ collect the type schemes for built-in constructors, built-in operators and user-defined functions. A type environment $\TtypEnv$ collects the types for program variables. $\OStypEnv$ denotes the distinguished built-in type-scheme environment for built-in constructors and built-in functions. $\FTV{\type}$ denotes the set of type variables occurring in the type $\type$.
 
 Rule \ruleNameSize{[T-VAR]} assigns a type to a variable $\xname$ by looking the type assumptions $\TtypEnv$. Rule \ruleNameSize{[T-DAT]} assigns a type to a data value by extracting the type scheme of the data constructor from the type-scheme environment $\TStypEnv$. Rules \ruleNameSize{[T-A-FUN]} and \ruleNameSize{[T-N-FUN]} assign a type to anonymous function and built-in or declared function names, respectively. Rule \ruleNameSize{[T-APP]} assigns a type to a function application. Rule \ruleNameSize{[T-REP]} assigns a type to a $\mathtt{rep}$-expression, ensuring that the initial value and the domain and range of the body have the same type. Rule \ruleNameSize{[T-NBR]} assings a type to a $\mathtt{nbr}$-expression that has the same type as the expression inside the operator. Rule \ruleNameSize{[T-FOLD]} assigns a type to a $\mathtt{foldhood}$-expression, ensuring that $\e_1$ and $\e_3$ have the same type $\type$ and that $\e_2$ has type $(\type,\type) \to \type$.
 
