--- a/src/60-kotac.tex
+++ b/src/60-kotac.tex
@@ -118,17 +118,17 @@ $
 \label{fig:fkotacsyntax}
 \end{figure}
 
-In order to formalize the semantic of \Kotac{} a subset of it has been considered called \textit{Featherweight \Kotac{} (\FKotac{})}. The syntax of \FKotac is shown in figure \ref{fig:fkotacsyntax}, it focus on the aggregate constructs ignoring the Kotlin specific features. Unlike \FSCAFI, which considers only aggregate functions (which require alignment), in \FKotac has been considered also standard function, i.e. kotlin functions that don't require alignment and don't allow to call aggregate functions and aggregate constructs in their body. 
+In order to formalize the semantic of \Kotac{} a subset of it has been considered called \textit{Featherweight \Kotac{} (\FKotac{})}. The syntax of \FKotac is shown in figure \ref{fig:fkotacsyntax}, it focus on the aggregate constructs ignoring the Kotlin specific features. Unlike \FSCAFI, which considers only aggregate functions (which require alignment), in \FKotac has been considered also standard function, i.e. kotlin functions that don't require alignment and don't allow to call aggregate functions and aggregate constructs in their body. For simplicity data values of function values and fields of function values are not allowed. Also standard function values cannot be passed to aggregate functions and viceversa.
 
-A program $\PROGRAM$ is a sequence of function declarations $\overline{\FUNCTION}$, each of which can be either an aggregate function $\AFUNCTION$ or a standard function $\SFUNCTION$, followed by a main aggregate expression $\aexp$. An aggregate function declaration $\AFUNCTION$ defines a (possibly recursive) aggregate function named $\afname$, with a sequence of formal parameters $\overline{\xname}$ and a body aggregate expression $\aexp$. A standard function declaration $\SFUNCTION$ defines a (possibly recursive) standard function named $\sfname$ with a sequence of formal parameters $\overline{\xname}$ and a body standard expression $\sexp$. 
+A program $\PROGRAM$ is a sequence of function declarations $\overline{\FUNCTION}$, each of which can be either a standard function $\SFUNCTION$ or an aggregate function $\AFUNCTION$, followed by a main aggregate expression $\aexp$. A standard function declaration $\SFUNCTION$ defines a (possibly recursive) standard function named $\sfname$ with a sequence of formal parameters $\overline{\xname}$ and a body standard expression $\sexp$. An aggregate function declaration $\AFUNCTION$ defines a (possibly recursive) aggregate function named $\afname$, with a sequence of formal parameters $\overline{\xname}$ and a body aggregate expression $\aexp$. 
 
-An aggregate expression $\aexp$ can be a variable $\xname$, a value $\anyvalue$, a function application $\aexp(\overline{\aexp})$ where $\aexp$ evaluates to a function $\afunvalue$ or $\sfunvalue$ and $\overline{\aexp}$ are the arguments, a $\mathtt{rep}$-expression $\repK(\aexp)\{ \aexp \}$ modelling time evolution, a $\mathtt{nbr}$-expression $\nbrK\{\aexp\}$ modelling neighbourhood interaction or a $\mathtt{share}$-expression $\shareK(\aexp)\{(\xname) \ftoSym \aexp \}$ modelling time evolution based on a neighbouring field. A standard expression $\sexp$ can be a variable $\xname$, a standard local value $\slvalue$ or a function application $\sexp(\overline{\sexp})$ where $\sexp$ evaluates to a function $\sfunvalue$ and $\overline{\sexp}$ are the arguments.
+A standard expression $\sexp$ can be a variable $\xname$, a standard value $\svalue$, an anonymous function $(\overline{\xname}) \; \ftoSym \{ \sexp \}$  where $\overline{\xname}$ are variable names for the formal parameters and $\sexp$ is the body, or a function application $\sexp(\overline{\sexp})$ where $\sexp$ evaluates to a function $\sfunvalue$ and $\overline{\sexp}$ are the arguments. An aggregate expression $\aexp$ can be a variable $\xname$, a value $\anyvalue$, an anonymous function $(\overline{\xname}) \; \toSym{\name}{\{\alignK\{\aexp\}\}}$ where $\overline{\xname}$ are variable names for the formal parameters, $\aexp$ is the body of the function and $\name$ is a \textit{tag} that uniquely identifies the function and doesn't occours in the source program, a function application $\aexp(\overline{\aexp})$ where $\aexp$ evaluates to a function $\afunvalue$ or $\sfunvalue$ and $\overline{\aexp}$ are the arguments, a $\mathtt{rep}$-expression $\repK(\aexp)\{ \aexp \}$ modelling time evolution, a $\mathtt{nbr}$-expression $\nbrK\{\aexp\}$ modelling neighbourhood interaction or a $\mathtt{share}$-expression $\shareK(\aexp)\{(\xname) \ftoSym \aexp \}$ modelling time evolution based on a neighbouring field.
 
-A value can be either an aggregate local value $\alvalue$, a standard local value $\slvalue$ or a neighbouring field value $\fvalue$. Neighbouring field values doesn't appear in the source code but can only be computed dynamically, usally by built-in operators like $\mathtt{nbr}$ or $\mathtt{share}$.
+A standard value can be either a local data value $\lvalue$ or a standard function value $\sfunvalue$. A local data value is a data value $\dcOf{\dc}{\overline\lvalue}$, in which $\dc$ is a data constructor and $\overline{\lvalue}$ are local data value arguments. A value can be either a local data value $\lvalue$, a function value $\funvalue$ or a neighbouring field value $\fvalue$. Neighbouring field values doesn't appear in the source code but can only be computed dynamically, usally by built-in operators like $\mathtt{nbr}$ or $\mathtt{share}$. A function value can be either a standard function value $\sfunvalue$ or an aggregate function value $\afunvalue$.
 
-Aggregate local values can be either a data value $\dcOf{\dc}{\overline\lvalue}$, in which $\dc$ is a data constructor and $\overline{\lvalue}$ are local value arguments, or an aggregate function value $\afunvalue$. Standard local values can be either a data value $\dcOf{\dc}{\overline\slvalue}$, in which $\dc$ is a data constructor and $\overline{\slvalue}$ are standard local value arguments, or a standard function value $\sfunvalue$.
+A standard function value $\sfunvalue$ can be a standard built-in function $\sbname$ (e.g. a temperature sensor or a pure mathematical or logical function), a declare standard function $\sfname$ or a closed anonymous standard function value $(\overline{\xname}) \; \ftoSym \{ \sexp \}$. An aggregate function value $\afunvalue$ can be an aggregate built-in function $\abname$ (e.g. nbrsense, which returns a field of the distances from the neighbours, or maxhood, which returns the maximum value in the argument field), a declared aggregate function $\afname$ or a closed anonymous aggregate function value $ (\overline{\xname}) \; \toSym{\name}{\{\alignK\{\aexp\}\}}$.
 
-An aggregate function value $\afunvalue$ can be an aggregate built-in function $\abname$ (e.g. nbrsense, which returns a field of the distances from the neighbours, or maxhood, which returns the maximum value in the argument field), a declared aggregate function $\afname$ or an anonymous aggregate function value $ (\overline{\xname}) \; \toSym{\name}{\{\alignK\{\aexp\}\}}$, where $\overline{\xname}$ are variable names for the formal parameters, $\aexp$ is the body of the function and $\name$ is a \textit{tag} that uniquely identifies the function and doesn't occours in the source program. A standard function value $\sfunvalue$ can be a standard built-in function $\sbname$ (e.g. a temperature sensor or a pure mathematical or logical function), a declare standard function $\sfname$ or an anonymous standard function value $(\overline{\xname}) \; \ftoSym \{ \sexp \}$, where $\overline{\xname}$ are variable names for the formal parameters and $\sexp$ is the body of the function.
+Both aggregate branching expression and standard if expression are not part of the syntax since they can be implemented as syntactic sugar, they will therefore not be considered in the semantic and typing rules.
 
 \subsection{\FKotac{} semantics}
 
@@ -309,9 +309,9 @@ An aggregate function value $\afunvalue$ can be an aggregate built-in function $
  \caption{Big-step operational semantics of \FKotac{}.} \label{fig:kotacSemantics}
 \end{figure}
 
-Figure \ref{fig:kotacSemantics} shows the operational semantics of the syntax. It follows the same notation of the field calculus semantics and uses the same auxiliary functions. Rules \ruleNameSize{[E-LOC]} e \ruleNameSize{[E-FLD]} define the evaluation of local values (aggregate or standard) and neighbouring values, both producing a value-tree with no subtrees, with a domain restriction to the aligned devices in case of neighbouring fields. Rules \ruleNameSize{[E-BA-APP]} and \ruleNameSize{[E-DA-APP]} model the application of aggregate built-in functions and aggregate user defined (or anonymous) functions, the former based on a function different for each built-in and the latter by executing the body of the function. Rules \ruleNameSize{[E-BS-APP]} and \ruleNameSize{[E-DS-APP]} model the application of standard built-in functions and standard user defined (or anonymous) functions, those rules are not present in the field calculus semantics. In the former the root of the value-tree is computed by a function $\builtinop{\sbname}{\correction{\deviceId}}{\senstate}$ not dependent on the environement or sensor state and different for each built-in. In the latter the root is computed by executing the body of the function $\funvalue$ with an empty value-tree environment and discarding its computed sub-value-tree, except for the root which its the root of the new value-tree. Rule \ruleNameSize{[E-NBR]} models the evaluation of $\mathtt{nbr}$-expressions, by extracting from the value-tree environment the neighbouring values to build a neighbouring field, and computing the expressions $\e$ for the new value of the executing device. Rule \ruleNameSize{[E-REP]} models the evauation of $\mathtt{rep}$-expressions, by extracting from the value-tree environemtn the last computed value for the new evaluation of $\e$. Rule \ruleNameSize{[E-SHARE]} models the evaluation of $\mathtt{share}$-expressions, by constructing a field of the last computing values as the argument $\xname$ for the evaluation of $\e_2$ and using $\e_1$ as the initial value of the executing device.
+Figure \ref{fig:kotacSemantics} shows the operational semantics of the syntax. It follows the same notation of the field calculus semantics and uses the same auxiliary functions. Rules \ruleNameSize{[E-LOC]} e \ruleNameSize{[E-FLD]} define the evaluation of local data values, function values and neighbouring values, both producing a value-tree with no subtrees, with a domain restriction to the aligned devices in case of neighbouring fields. Rules \ruleNameSize{[E-B-APP]} and \ruleNameSize{[E-D-APP]} model the application of aggregate or standard built-in functions and aggregate or standard user defined (or anonymous) functions, the former based on a function different for each built-in and the latter by executing the body of the function. In the case of standard functions the values are computed with an empty value-tree environement. Rule \ruleNameSize{[E-NBR]} models the evaluation of $\mathtt{nbr}$-expressions, by extracting from the value-tree environment the neighbouring values to build a neighbouring field, and computing the expressions $\e$ for the new value of the executing device. Rule \ruleNameSize{[E-REP]} models the evauation of $\mathtt{rep}$-expressions, by extracting from the value-tree environemtn the last computed value for the new evaluation of $\e$. Rule \ruleNameSize{[E-SHARE]} models the evaluation of $\mathtt{share}$-expressions, by constructing a field of the last computing values as the argument $\xname$ for the evaluation of $\e_2$ and using $\e_1$ as the initial value of the executing device.
 
-It's important to note that a standard function $\sfname$ can be called for example with an aggregate anonymous functions $\name$ as parameters according to the syntax and semantics. If the function $\name$ is then called inside the body of $\sfname$ it will not have the expected aligned behavior. In order to avoid this situation typing rules must enforce that only standard local value can be passed as arguments of standard functions (either declared or anonymous).
+It's important to note that a standard function $\sfname$ can be called for example with an aggregate anonymous functions $\name$ as parameters according to the syntax and semantics. If the function $\name$ is then called inside the body of $\sfname$ it will not have the expected aligned behavior. In order to avoid this situation typing rules must enforce that only standard values can be passed as arguments of standard functions (either declared or anonymous).
 
 \begin{figure}[!t]{
  $\begin{array}{l}
@@ -385,9 +385,12 @@ Figure \ref{fig:kotacnetworkSemantics} defines the operational semantics of whol
 \begin{array}{rcl@{\hspace{7.5cm}}r}
 \type & \BNFcce &  \tvar  \; \BNFmid \;  \builtintype \; \BNFmid \;  (\overline\type) \rightarrow \type  \; \BNFmid \; \ftypeOf{\builtintype}       &   {\footnotesize \mbox{type}} \\
 %
-\tctx & \BNFcce &  \aann \; \BNFmid \;  \sann &   {\footnotesize \mbox{context}} \\
+\builtintype & \BNFcce & \bvar\; \BNFmid \;  \bitype &   {\footnotesize \mbox{built-in type}} \\
 %
-\typescheme & \BNFcce &  \forall\overline{\tvar}.\type      &   {\footnotesize \mbox{type scheme}} \\
+\typescheme & \BNFcce &  \forall\overline{\tvar}\overline{\bvar}.\type      &   {\footnotesize \mbox{type scheme}} \\
+%
+\hline\\[-8pt]
+\tctx & \BNFcce &  \aann \; \BNFmid \;  \sann &   {\footnotesize \mbox{context}} \\[8pt]
 %
 %\localenv & \BNFcce & \envS{\senstate}{\overline\vtree} &   {\footnotesize \mbox{local environment}} \\
 \end{array}\\
@@ -419,11 +422,11 @@ Figure \ref{fig:kotacnetworkSemantics} defines the operational semantics of whol
 %
 {
 \surfaceTyping{T-DAT}{ \quad
-\applySubstitution{\type'}{\substitution{\overline\tvar}{\overline\type''}} = (\overline{\type})\rightarrow\type
+\applySubstitution{\applySubstitution{\type'}{\substitution{\overline\tvar}{\overline\type''}}}{\substitution{\overline\bvar}{\overline\builtintype}} = (\overline{\type})\rightarrow\type
 \qquad
 \expTypJudC{\tctx}{\TStypEnv}{\TtypEnv}{\overline{\lvalue}}{\overline{\type}}
 }{
-\expTypJudC{\tctx}{\TStypEnv,\dc: \forall \overline{\tvar}. \type'}{\TtypEnv}{\dc(\overline{\lvalue})}{\type} }
+\expTypJudC{\tctx}{\TStypEnv,\dc: \forall \overline{\tvar}\overline{\bvar}. \type'}{\TtypEnv}{\dc(\overline{\lvalue})}{\type} }
 }
 %
 \skiptransition
@@ -443,7 +446,7 @@ Figure \ref{fig:kotacnetworkSemantics} defines the operational semantics of whol
 {
 \surfaceTyping{T-N-AFUN}{ \quad
 \mbox{$\afunvalue$ is a (built-in or declared) aggregate function}}{
-\expTypJudC{\aann}{\TStypEnv,\afunvalue: \forall \overline{\tvar}. \type}{\TtypEnv}{\afunvalue}{\applySubstitution{\type}{\substitution{\overline\tvar}{\overline\type}}} }
+\expTypJudC{\aann}{\TStypEnv,\afunvalue: \forall \overline{\tvar}\overline{\bvar}. \type}{\TtypEnv}{\afunvalue}{\applySubstitution{\applySubstitution{\type}{\substitution{\overline\tvar}{\overline\type}}}}{\substitution{\overline\bvar}{\overline\builtintype}} }
 }
 %
 \skiptransition
@@ -451,7 +454,7 @@ Figure \ref{fig:kotacnetworkSemantics} defines the operational semantics of whol
 {
 \surfaceTyping{T-N-SFUN}{ \quad
 \mbox{$\sfunvalue$ is a (built-in or declared) standard function}}{
-\expTypJudC{\sann}{\TStypEnv,\sfunvalue: \forall \overline{\tvar}. \type}{\TtypEnv}{\sfunvalue}{\applySubstitution{\type}{\substitution{\overline\tvar}{\overline\type}}} }
+\expTypJudC{\sann}{\TStypEnv,\sfunvalue: \forall \overline{\tvar}\overline{\bvar}. \type}{\TtypEnv}{\sfunvalue}{\applySubstitution{\applySubstitution{\type}{\substitution{\overline\tvar}{\overline\type}}}}{\substitution{\overline\bvar}{\overline\builtintype}} }
 }
 %
 \skiptransition
@@ -472,9 +475,9 @@ Figure \ref{fig:kotacnetworkSemantics} defines the operational semantics of whol
 %\skiptransition
 %%
 \surfaceTyping{T-REP}{ \qquad
-\expTypJudC{\aann}{\TStypEnv}{\TtypEnv}{\e_1}{\type}
-\qquad \expTypJudC{\aann}{\TStypEnv}{\TtypEnv,\xname:\type}{\e_2}{\type} }{
-\expTypJudC{\aann}{\TStypEnv}{\TtypEnv}{\repK(\e_1)\{(\xname) \ftoSym \e_2\}}{\type} }
+\expTypJudC{\aann}{\TStypEnv}{\TtypEnv}{\e_1}{\builtintype}
+\qquad \expTypJudC{\aann}{\TStypEnv}{\TtypEnv,\xname:\type}{\e_2}{\builtintype} }{
+\expTypJudC{\aann}{\TStypEnv}{\TtypEnv}{\repK(\e_1)\{(\xname) \ftoSym \e_2\}}{\builtintype} }
 %
 \qquad\qquad
 %
@@ -503,8 +506,8 @@ Figure \ref{fig:kotacnetworkSemantics} defines the operational semantics of whol
 \qquad
 \expTypJudC{\aann}{\TStypEnv,\,\afname:\forall\emptyseq.(\overline{\type})\rightarrow\type}{\overline{\xname}:\overline{\type}}{\e}{\type}
 \qquad
-\overline{\tvar}=\FTV{(\overline{\type})\rightarrow\type}
-}{ \funTypJud{\TStypEnv}{\funK \; \afname (\overline{\xname}) \; \{ \alignK{\{\e\}} \}}{\forall\overline{\tvar}.(\overline{\type})\rightarrow\type}}
+\overline{\tvar}\overline{\bvar}=\FTV{(\overline{\type})\rightarrow\type}
+}{ \funTypJud{\TStypEnv}{\funK \; \afname (\overline{\xname}) \; \{ \alignK{\{\e\}} \}}{\forall\overline{\tvar}\overline{\bvar}.(\overline{\type})\rightarrow\type}}
 %
 \skiptransition
 %
@@ -513,8 +516,8 @@ Figure \ref{fig:kotacnetworkSemantics} defines the operational semantics of whol
 \qquad
 \expTypJudC{\sann}{\TStypEnv,\,\sfname:\forall\emptyseq.(\overline{\type})\rightarrow\type}{\overline{\xname}:\overline{\type}}{\e}{\type}
 \qquad
-\overline{\tvar}=\FTV{(\overline{\type})\rightarrow\type}
-}{ \funTypJud{\TStypEnv}{\funK \; \sfname (\overline{\xname}) \; \{ \e\}}{\forall\overline{\tvar}.(\overline{\type})\rightarrow\type}}
+\overline{\tvar}\overline{\bvar}=\FTV{(\overline{\type})\rightarrow\type}
+}{ \funTypJud{\TStypEnv}{\funK \; \sfname (\overline{\xname}) \; \{ \e\}}{\forall\overline{\tvar}\overline{\bvar}.(\overline{\type})\rightarrow\type}}
 %
 \skiptransition
 %
@@ -545,3 +548,9 @@ Figure \ref{fig:kotacnetworkSemantics} defines the operational semantics of whol
 \end{array}$}
 } \caption{Type rules for \FKotac{} expressions, function declarations, and programs.} \label{fig:fkotacTyping}
 \end{figure}
+
+Figure \ref{fig:fkotacTyping} shows the typing rules for \FKotac{}. A type $\type$ can be a type variable $\tvar$, a built-in type $\builtintype$, a function type $\overline{\type}\to\type$ or a field type $\ftypeOf{\builtintype}$ of a built-in type  $\builtintype$. A built-in type $\builtintype$ is either a built-in variable type $\bvar$ (which actual value can be only a built-in type) or a basic built-in type $\bitype$. Type schemes $\typescheme$ can produce regular types $\type$ by replacing the type variables $\overline{\tvar}$ with types $\overline{\type}$ and the type variables $\overline{\bvar}$ with types $\overline{\builtintype}$. The typing judgement rules are given in the form $\expTypJudC{\tctx}{\TStypEnv}{\TtypEnv}{\e}{\type}$, meaning that $\e$ has type $\type$ under the context $\tctx$, the type-scheme assumptions $\TStypEnv$ and the type assumptions $\TtypEnv$- A context $\tctx$ can be either an aggregate context $\aann$ or a standard context $\sann$, the former meaning that the typing is currently happening inside an aggregate function or expression, the latter inside a standard function or expression.  A type scheme environement $\TStypEnv$ collect the type schemes for built-in constructors, built-in operators and user-defined functions. A type environment $\TtypEnv$ collects the types for program variables. $\OStypEnv$ denotes the distinguished built-in type-scheme environment for built-in constructors and built-in functions. $\FTV{\type}$ denotes the set of type variables occurring in the type $\type$.
+
+Rules \ruleNameSize{[T-ATOS]} and \ruleNameSize{[T-STOA]} allows arbitrary change of context for expressions of built-in types. Those values are the only one allowed to be passed to standard functions to aggregate functions and viceversa. Rule \ruleNameSize{[T-VAR]} assigns in any context a type to a variable $\xname$ by looking the type assumptions $\TtypEnv$. Rule \ruleNameSize{[T-DAT]} assigns in any context a type to a local data value by extracting the type-scheme of the data constructor from the type-scheme environment $\TStypEnv$ and replacing the type variables with types. Rules \ruleNameSize{[T-A-AFUN]} and \ruleNameSize{[T-A-SFUN]} assign a type to an anonymous aggregate function and an anonumous standard function respectively, the former in the aggregate context, the latter in the standard context. Rules \ruleNameSize{[T-N-AFUN]} and \ruleNameSize{[T-N-SFUN]} assign a type to a built-in or declared function, the former in the aggregate context in case of an aggregate function, the latter in the standard context in case of a standard function, both by the function type scheme in the type-scheme assumptions. Rule \ruleNameSize{[T-APP]} assigns a type to a function application, by typing in the same context the function and the arguments. Rule \ruleNameSize{[T-REP]} assigns in the aggregate context a type to a $\mathtt{rep}$-expression, ensuring that the initial value and the body have the same built-in type. Rule \ruleNameSize{[T-NBR]} assings in the aggregate context a field type to a $\mathtt{nbr}$-expression. Rule \ruleNameSize{[T-SHARE]} assigns in the aggregate context a type to a $\mathtt{share}$-expression, enrsuring that the initial value and the body have the same built-in type.
+
+Rules \ruleNameSize{[T-AFUNCTION]} and \ruleNameSize{[T-SFUNCTION]} assigns a type scheme to a user defined function, aggregate and standard respectively, each in the appropriate context. Rule \ruleNameSize{[T-PROGRAM]} allows to type a program with the type of the main expression in the aggregate context by adding to the type-scheme environment the type schemes of all the user defined functions.
